# ripasso

.github/workflows/: rust.yml
cursive/: Cargo.toml
cursive/src/: main.rs
