[package]
name = "ripasso-cursive"
version = "0.3.0-alpha"
authors = ["Joakim Lundborg <joakim.lundborg@gmail.com>", "Alexander Kjäll <alexander.kjall@gmail.com>"]

[dependencies]
cursive = { git = "https://github.com/gyscos/cursive", features = ["toml"]}
clipboard = "0.5"
ripasso = { path = "../"}
env_logger = "0.6"
git2 = "0.10.0"
